# TESSERA

./: DEPLOYMENT.md  vercel.json
content/: TESSERA_ONE_CONTENT.md
public/videos/: README.txt
rag/: .gitignore  CLAUDE.md  pyproject.toml
rag/scripts/: build_index.py  evaluate.py  interactive.py
rag/tessera_rag/: __init__.py  config.py
rag/tessera_rag/api/: models.py  server.py
rag/tessera_rag/data/: download.py  preprocess.py  schema.py
rag/tessera_rag/index/: embedder.py  faiss_index.py
rag/tessera_rag/learning/: active_learner.py  user_profile.py
rag/tessera_rag/pipeline/: cache.py  curve_fitter.py  dynamic_rag.py  generator.py  prompt_builder.py  rag.py  retriever.py
rag/tests/: test_pipeline.py  test_preprocess.py  test_retriever.py
src/: App.jsx  index.css
src/components/: DiscoverPage.jsx  FounderVideoSection.jsx  Logogram.jsx  SpecsPage.jsx  VideoPlayer.jsx
website/: .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json
website/api/: early-believer.js  thank-you.js
website/api/lib/: sendBelieverThankYou.js
website/content/: DESIGN_PHILOSOPHY.md  GAMMA_PROMPT.md  TESSERA_ONE_CONTENT.md  TESSERA_ONE_PITCH_DECK.md  pitch_to_pptx.py
website/scripts/: convert-textures.mjs  convert-textures.py  crop-founder-video.ps1
website/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx  sectionBackgrounds.js
website/src/components/: AnswerSection.jsx  CircuitTexture.jsx  ConceptIllustrations.jsx  DiscoverPage.jsx  EQFeaturesPage.jsx  EQProductSection.jsx  EarlyBelievers.jsx  EternalRing.jsx  FounderVideoSection.jsx  (+15 more)
(+2 files in other folders)
